# simrs

./: .gitignore  Cargo.toml  agents.md  compile_errors.txt
src/: game_events.rs  graph.rs  lib.rs  main.rs  person.rs  personality.rs
src/baby_spawner/: config.rs  events.rs  mod.rs  plugin.rs  system.rs
src/gregslist/: component.rs  mod.rs  plugin.rs
src/hiring_manager/: component.rs  mod.rs  plugin.rs
src/inventory/: component.rs  mod.rs  plugin.rs
src/jobs/: component.rs  mod.rs  plugin.rs
src/mortality/: events.rs  mod.rs  plugin.rs  system.rs
src/records/: mod.rs  plugin.rs  records.rs  rolling_mean.rs  ui.rs
src/view/: mod.rs  plugin.rs
tests/: mortality_ecs_props.rs  mortality_model_props.rs  mortality_rng.rs  ui_vacancy_text.rs
